--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "multi-user-api-seed",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Jayson San Agustin <sanagustinjayson@gmail.com>",
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
@@ -22,18 +22,36 @@
   "dependencies": {
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
+    "@nestjs/mongoose": "^6.3.1",
+    "@nestjs/passport": "^6.2.0",
     "@nestjs/platform-express": "^6.10.14",
+    "@nestjs/swagger": "^4.3.2",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
+    "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.4",
+    "passport": "^0.4.1",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.13.2",
     "@nestjs/schematics": "^6.8.1",
     "@nestjs/testing": "^6.10.14",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/jest": "25.1.2",
+    "@types/mongoose": "^5.7.6",
     "@types/node": "^13.1.6",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local-mongoose": "^4.0.13",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
